--- a/index.html
+++ b/index.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="styles\normalize.css">
+  <link rel="stylesheet" href="styles\style.css">
 </head>
+
 <body>
   <div class="page">
     <header class="header">
+    
+      <div class="logo logo_place_header"></div>
 
+      <h1 class="header__title">Научиться учиться</h1>
+
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать &xrarr;</a>
+      </p>
+
+      <img class="header__main-illustration" src=".\images\two_again.png" alt="Федор Решетников, Опять двойка (картина)">
+      
+      <div class="header__square-pic rotation"></div>
     </header>
+
     <main class="content">
+
       <section class="description">
+
       </section>
 
       <section class="digits">
+
       </section>
 
       <section class="feynman">
+
       </section>
 
       <section class="kaufman">
+
       </section>
+
     </main>
+
     <footer class="footer">
 
     </footer>
