Исправление header и разработка description
Заметил, что при скроллинге картинка двигалась вместе с экраном, а это плохо. Попытался это исправить

--- a/index.html
+++ b/index.html
@@ -27,11 +27,31 @@
       <div class="header__square-pic rotation"></div>
     </header>
 
+    <!-- ---------------- -->
+
     <main class="content">
-
       <section class="description">
+        <div class="two-columns br">
+          <h2 class="two-columns__brief br">Главные проблемы в обучении</h2>
 
+          <div class="two-columns__main-text br">
+            <p class="two-columns__paragraph br no-margin-top">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+
+            <p class="two-columns__paragraph br">
+              <span class="two-columns__span-accent br">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+
+            <p class="two-columns__paragraph br no-margin-botton">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </div>
       </section>
+
+    <!-- ---------------- -->
 
       <section class="digits">
 
