--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief ">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
 
           <div class="two-columns__main-text ">
-            <p class="two-columns__paragraph no-margin-top">
+            <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
             </p>
 
@@ -44,7 +44,7 @@
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
 
-            <p class="two-columns__paragraph no-margin-botton">
+            <p class="two-columns__paragraph no-margin-bottom">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
@@ -65,7 +65,7 @@
 
           <li class="table__cell">
             <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text margin-bottom-20">Число нуждающихся в повышении квалификации</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
 
@@ -81,7 +81,7 @@
 
           <li class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text margin-bottom-20">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </li>
 
