--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer">
-            <img src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
+            <img src="../images/logo_place_footer.svg" alt="Логотип Яндекс Практикум">
           </div>
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
 
-        <nav class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">  
           <h3 class="footer__column-heading">О Практикуме</h3>
 
           <ul class="footer__column-links">
