--- a/index.html
+++ b/index.html
@@ -51,54 +51,68 @@
 
     <!-- ---------------- -->
 
-      <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <div class="cards">
+        <div class="cards__item">
+          <img src="images/cards-attention.png" alt="Для вида внимания" class="cards__image">
+          <h4 class="cards__title">Два вида внимания</h4>
+          <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+            мышление.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-recall.png" alt="Recall" class="cards__image">
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-interliving.png" alt="Интерливинг" class="cards__image">
+          <h4 class="cards__title">Интерливинг</h4>
+          <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-question.png" alt="Вопросы" class="cards__image">
+          <h4 class="cards__title">Вопросы</h4>
+          <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+            волнует.</p>
+        </div>
+        <div class="cards__item">
+          <img src="images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
+          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+            владеете новой темой.</p>
+        </div>
+      </div>
+    </section>
 
-        <ul class="table">
-          <li class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </li>
+    <!-- ---------------- -->
 
-          <li class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text margin-bottom-20">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </li>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <div class="video__iframes">
+        <iframe class="video__iframe" id="ytplayer" width="515" height="316"
+          src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+        <iframe class="video__iframe" id="ytplayer2" width="515" height="316"
+          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+      </div>
+    </section>
 
-          <li class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объём памяти человека</p>
-          </li>
+    <!-- ---------------- -->
 
-          <li class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </li>
-
-          <li class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text margin-bottom-20">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </li>
-
-          <li class="table__cell">
-            <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text">Пик обучаемости</p>
-          </li>
-
-          <li class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
-            <p class="table__text">Открытие кривой забывания</p>
-          </li>
-
-          <li class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
-            <p class="table__text">Открытие условного рефлекса</p>
-          </li>
-        </ul>
-      </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+            гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+            так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+            тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые
+            трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- ---------------- -->
 
@@ -107,6 +121,76 @@
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="https://lifehacker.ru/metod-fejnmana/" target="_blank" class="feynman__link">Подробнее &xrarr;</a>
       </section>
+
+
+    <!-- ---------------- -->
+
+    <section class="digits">
+      <h2 class="section-title">Цифры и факты</h2>
+      <p class="section-subtitle">Про учёбу и мозг</p>
+
+      <ul class="table">
+        <li class="table__cell">
+          <h3 class="table__heading">86 миллиардов</h3>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">2,1 миллиарда</h3>
+          <p class="table__text margin-bottom-20">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">1000 терабайт</h3>
+          <p class="table__text">Объём памяти человека</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">500 триллионов</h3>
+          <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">420 миллионов</h3>
+          <p class="table__text margin-bottom-20">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+          <p class="table__text">Всемирный Банк, 2017</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">17–20 лет</h3>
+          <p class="table__text">Пик обучаемости</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">1885 год</h3>
+          <p class="table__text">Открытие кривой забывания</p>
+        </li>
+
+        <li class="table__cell">
+          <h3 class="table__heading">1889 год</h3>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- ---------------- -->  
+
+    <section class="khan">
+      <div class="khan__container">
+        <p class="khan__author">Салман Хан</p>
+        <h3 class="khan__title">Весь мир — школа</h3>
+        <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
+          получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        <div class="khan__book-container">
+          <img src="images/khan-book.jpg" alt="Салман Хан: Весь мир — школа" class="khan__book-pic">
+          <a class="khan__buy-link" href="#">Купить книгу →</a>
+        </div>
+      </div>
+    </section>
 
     <!-- ---------------- -->  
 
@@ -169,6 +253,28 @@
       </section>
     </main>
 
+    <!-- ---------------- -->  
+
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <div class="resources__logo-zone">
+        <a href="#" class="resources__link">
+          <img src="images/logo/resources-arzamas.svg" alt="Arzamas logo" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="images/logo/resources-n1.svg" alt="n+1 logo" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="images/logo/resources-strelka.svg" alt="strelka logo" class="resources__logo">
+        </a>
+        <a href="#" class="resources__link">
+          <img src="images/logo/resources-polka.svg" alt="polka logo" class="resources__logo">
+        </a>
+      </div>
+    </section>
+  </main>
+
     <!-- ---------------- -->      
 
     <footer class="footer">
@@ -204,8 +310,8 @@
                 <img src="images/tiktok_color_white.svg" alt="TikTok icon" class="footer__social-link">TikTok</a>
             </div>
           </div>
-
         </div>
+        
       </footer>
     </div>
   </body>
