--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles\normalize.css">
-  <link rel="stylesheet" href="styles\style.css">
+  <link rel="stylesheet" href="/vendor/normalize.css">
+  <link rel="stylesheet" href="/pages/index.css">
 </head>
 
 <body>
@@ -26,6 +26,8 @@
       
       <div class="header__square-pic rotation"></div>
     </header>
+
+    <!-- ---------------- -->
 
     <main class="content">
       <section class="description">
